KZHub/K8S/cardgeneration-np-srv.yaml
apiVersion: v1
kind: Service
metadata:
  name: cardgenerationnpservice-srv
spec:
  type: NodePort
  selector:
    app: cardgeneration
  ports:
    - name: cardgeneration
      protocol: TCP
      port: 80
      targetPort: 80
