KZHub/K8S/mssql-identity-plat-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mssql-identity-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mssql-identity
  template:
    metadata:
      labels:
        app: mssql-identity
    spec:
      containers:
        - name: mssql-identity
          image: mcr.microsoft.com/mssql/server:2017-latest
          ports:
            - containerPort: 1433
          volumeMounts:
          - mountPath: /var/opt/mssql/data
            name: mssqldb
      volumes:
      - name: mssqldb
        persistentVolumeClaim:
          claimName: mssql-identity-claim
---
apiVersion: v1
kind: Service
metadata:
  name: mssql-identity-clusterip-srv
spec:
  type: ClusterIP
  selector:
    app: mssql-identity
  ports:
  - name: mssql-identity
    protocol: TCP
    port: 1432
    targetPort: 1433
---
apiVersion: v1
kind: Service
metadata:
  name: mssql-identity-loadbalancer
spec:
  type: LoadBalancer
  selector:
    app: mssql-identity
  ports:
  - protocol: TCP
    port: 1432
    targetPort: 1433
