KZHub/K8S/webclient-np-srv.yaml
apiVersion: v1
kind: Service
metadata:
  name: webclientnpservice-srv
spec:
  type: NodePort
  selector:
    app: webclient
  ports:
    - name: webclient
      protocol: TCP
      port: 80
      targetPort: 80
