KZHub/K8S/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-srv
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  rules:
    - host: kzhub.com
      http:
        paths:
          - path: /client
            pathType: Prefix
            backend:
              service:
                name: webclient-clusterip-srv
                port:
                  number: 80
          - path: /cardgeneration
            pathType: Prefix
            backend:
              service:
                name: cardgeneration-clusterip-srv
                port:
                  number: 80
